Issue #13045: Avoid double encoding of URL
svn path=/trunk/; revision=41684


Former-commit-id: e142c800616b4ae36bdfd8944bb176cbec46a4ee